🐛 FIX: overflow task card

--- a/components/taskCard/taskCard.module.css
+++ b/components/taskCard/taskCard.module.css
@@ -4,6 +4,7 @@
   border-radius: 0.7rem;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
   box-shadow: var(--card-shadow);
+  overflow-x: hidden;
 }
 
 .taskCardTopBar,
